# Omega_utils

./: .gitignore  CMakeLists.txt  README.md  package.xml
test/: CMakeLists.txt  euler_angles_zxy_test.cc  integral_test.cc  math_utils_test.cc  matrix_operations_test.cc  quaternion_zxy_test.cc  search_test.cc  vec2d_test.cc
utils/: CMakeLists.txt  main_test.cpp
utils/Log/: binary.h
utils/Operation/: integral.cc  integral.h  math_utils.cc  math_utils.h  matrix_operations.h
utils/Operation/filter/: mean_filter.cc  mean_filter.h
utils/Operation/fitting_and_interpolation/: linear_interpolation.cc  linear_interpolation.h
utils/StringHexByte/: StringHexByte.cpp  StringHexByte.h
utils/Types/: line_segment2d.cc  line_segment2d.h  mytime.h  port.h
utils/Types/box2d/: aaboxkdtree2d.h  box2d.h
utils/Types/transform/: euler_angles_zxy.h  euler_angles_zyx.h  rigid_transform.h
utils/Types/vec/: vec2d.cc  vec2d.h  vec3d.cc  vec3d.h
utils/angle/: angle.cc  angle.h  angle_test.cc  sin_table.cc  sin_table.h
utils/box2d/: aabox2d.cc  aabox2d.h  aabox2d_test.cc  aaboxkdtree2d_test.cc  box2d.cc  box2d_test.cc
utils/filter/: digital_filter.cc  digital_filter.h  digital_filter_coefficients_test.cc  digital_filter_test.cc  kalman_filter_test.cc  mean_filter_test.cc
utils/fitting_and_interpolation/: hermite_spline.h  linear_interpolation_test.cc
utils/fundamental/: euler_angles_zxy.h  euler_angles_zxy_test.cc  integral.cc  integral_test.cc  math_utils.cc  math_utils.h  math_utils_test.cc  matrix_operations.cc  matrix_operations.h  matrix_operations_test.cc  quaternion.h  quaternion_test.cc  quaternion_zxy.h  search.cc  search.h  search_test.cc  vec2d.cc  vec2d.h
utils/fundamental/filter/: digital_filter_coefficients.cc  digital_filter_coefficients.h  kalman_filter.h
utils/fundamental/fitting_and_interpolation/: curve_fitting.h
utils/log/: log.h
utils/type_def/: line_segment2d_test.cc  vec2d.cc  vec2d.h  vec3d.cc  vec3d.h
utils/type_def/transform/: euler_angles_zxy.h  euler_angles_zyx.h  rigid_transform.cc  rigid_transform.h
