<?xml version="1.0"?>
<package format="2">
  <name>omega_utils</name>
  <version>0.1.0</version>
  <description>The omega_utils package</description>

  <maintainer email="autoware@todo.todo">autoware</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <!--  这里必须要有-->
  <export>
    <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib -lcommon"/>
  </export>

</package>
